# phone-numbers-console-tools

./: .gitignore  Makefile  README.md  pyproject.toml
beautifier/: beautify.py  make_os_config.py  make_tzb_config.py  project_config_os.json  project_config_tzb.json
beautifier/tests/: test_beautify.py
jpg-extractor/: extractor.py
mp3-handler/: handler.py
operator_work_time/: get_operator_work_time.py
pdf-extractor-1/: extractor.py
pdf-extractor-2/: extractor.py
pdf-extractor-tinkoff/: 1  extractor.py
quotas_filter/: config.json  filter.py  quotas.json
quotas_filter/tests/: test_filter.py
